Fixed styling of overlapping tabs

--- a/styles.css
+++ b/styles.css
@@ -63,16 +63,18 @@ body {
 .tabmenu-list {
     border-radius: 10px 10px 0px 0px;
     overflow: hidden;
-    height: 35px;
     vertical-align: baseline;
 }
 .tabmenuitem,
 .tabmenuitem-active {
+    position: relative;
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 10px;
-    margin-bottom: -5px;
+    margin-bottom: -200px;
+    height: 200px;
     padding: 5px;
+    padding-bottom: 10px;
     display: inline-block;
     border-radius: 10px 10px 0px 0px;
     text-align: center;
@@ -81,21 +83,17 @@ body {
     cursor: pointer;
 }
 .tabmenuitem {
-    position: relative;
-    height: 20px;
     top: 0px;
     transition: box-shadow 0.25s, background-color 0.25s, height 0.25s,
         top 0.25s;
 }
 .tabmenuitem:hover {
     top: -5px;
-    height: 25px;
     box-shadow: #060025 0px 0px 10px;
 }
 .tabmenuitem-active {
     position: relative;
     box-shadow: #060025 0px 0px 10px;
-    height: 25px;
     top: -5px;
 }
 .tabmenuitem-title {
